--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
+  expressions: ^0.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
