--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
   expressions: ^0.2.3
+  math_expressions: ^2.1.0 
 
 
   # The following adds the Cupertino Icons font to your application.
